package edu.hitsz.basic;

public interface bomb_monitor {
    public void update_bomb();
}
